bitnami/monitoring/monitoring-bitnami/kpt/grafana/service.yaml
---
# Source: helm/charts/grafana/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: monitoring-grafana
  namespace: "monitoring"
  labels:
    app.kubernetes.io/name: grafana
    helm.sh/chart: grafana-8.2.26
    app.kubernetes.io/instance: monitoring
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/component: grafana
spec:
  type: ClusterIP
  sessionAffinity: None
  ports:
    - port: 3000
      targetPort: dashboard
      protocol: TCP
      name: http
      nodePort: null
  selector:
    app.kubernetes.io/name: grafana
    app.kubernetes.io/instance: monitoring
    app.kubernetes.io/component: grafana
