bitnami/monitoring/monitoring-bitnami/kpt/grafana/ingress.yaml
# Source: monitoring/charts/kube-prometheus-stack/charts/grafana/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: monitoring-grafana
  namespace: monitoring
  labels:
    helm.sh/chart: grafana-6.20.5
    app.kubernetes.io/name: grafana
    app.kubernetes.io/instance: monitoring
    app.kubernetes.io/version: "8.3.3"
    app.kubernetes.io/managed-by: Helm
    cert-promoter: ready
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-production" # {"$kpt-set":"cert-issuer"}
    ingress.kubernetes.io/ssl-redirect: "true"
    kubernetes.io/ingress.class: "cilium"
    cert-manager.io/issue-temporary-certificate: "true"
    acme.cert-manager.io/http01-edit-in-place: "true"
spec:
  tls:
  - hosts:
    - grafana.local.ertia.cloud # {"$kpt-set":"grafana-domain"}
    secretName: grafana-tls
  rules:
  - host: grafana.local.ertia.cloud # {"$kpt-set":"grafana-domain"}
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: monitoring-grafana
            port:
              number: 3000
